--- a/projects/projects.json
+++ b/projects/projects.json
@@ -15,7 +15,7 @@
     "image": "colleventmgmt",
     "category": "lamp",
     "links": {
-      "view": "#",
+      "view": "https://www.evento.infinityfreeapp.com/?i=1",
       "code": "#"
     }
   },
@@ -25,7 +25,7 @@
     "image": "plantnursecom",
     "category": "lamp",
     "links": {
-      "view": "#",
+      "view": "https://aedangardens.free.nf/?i=1",
       "code": "#"
     }
   },
@@ -35,7 +35,7 @@
     "image": "spacs",
     "category": "basicweb",
     "links": {
-      "view": "#",
+      "view": "https://spacscec.free.nf/index_original.html?i=1",
       "code": "#"
     }
   },
@@ -44,6 +44,36 @@
     "desc": "Secure voting system using fingerprint verification and OTP via MXFACE API. Prevents fraud and ensures transparency.",
     "image": "biometricballot",
     "category": "lamp",
+    "links": {
+      "view": "https://biometric.free.nf/?i=1",
+      "code": "#"
+    }
+  },
+  {
+    "name": "Dev-E-Motors Billing Web App",
+    "desc": "Core PHP application to manage scooter billing, stock, customer data, and generate invoices with reporting.",
+    "image": "devemotorsbilling",
+    "category": "lamp",
+    "links": {
+      "view": "https://devemotors.free.nf/",
+      "code": "#"
+    }
+  },
+  {
+    "name": "Restaurant Management System",
+    "desc": "System to manage restaurant operations including tables, menus, orders, and generating sales reports for staff and management.",
+    "image": "restaurantmgmt",
+    "category": "lamp",
+    "links": {
+      "view": "http://www.resturantsen.free.nf/view.php",
+      "code": "#"
+    }
+  },
+  {
+    "name": "EduManage",
+    "desc": "Ongoing Laravel-based educational management system to handle student records, courses, attendance, and assessments with role-based access.",
+    "image": "edumanage",
+    "category": "laravel",
     "links": {
       "view": "#",
       "code": "#"
